--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <aside>
             <ul id="side_bar">
                 <li><a href="MBTeaI_description.html">MBTeaIとは？</a></li>
-                <li><a href="#">九州大学日本茶同好会とは？</a></li>
+                <li><a href="https://qdai-greenteaclab.github.io/homepage/index">九州大学日本茶同好会とは？</a></li>
                 <li><a href="MBTeaI_otyayasan.html">MBTeaIのお茶屋さん紹介</a></li>
             </ul>
         </aside>
@@ -53,3 +53,4 @@
         </footer>
     </body>
 </html>
+
