--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 <li><a href="MBTeaI_otyayasan.html">MBTeaIのお茶屋さん紹介</a></li>
             </ul>
         </aside>
-
+        <div class='space'>
+        </div>
         <footer>
             <ul id="sns">
                 <li>
@@ -53,4 +54,5 @@
         </footer>
     </body>
 </html>
+
 
