--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>MBTeaI</title>
         <meta name="description" content="お茶屋診断をします">
         <link rel="stylesheet" href="MBTeaI_css.css">
@@ -54,5 +55,6 @@
         </footer>
     </body>
 </html>
+
 
 
