--- a/MBTeaI_shindankekka.html
+++ b/MBTeaI_shindankekka.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>MBTeaI</title>
         <meta name="description" content="お茶屋診断をします">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/png" href="IMAGE/club_logo.png">
         <link rel="stylesheet" href="MBTeaI_css.css">
         <script src="MBTeaI_js.js" defer></script>
@@ -22,4 +23,5 @@
         <img src="IMAGE/IMG_3730.jpg" alt='茶店画像' id="otyaya_gazou">
         <button id="btn_fini" class="botton">ホームに戻る</button>
     </body>
+
 </html>
