--- a/MBTeaI_question.html
+++ b/MBTeaI_question.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>MBTeaI</title>
         <meta name="description" content="お茶屋診断をします">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/png" href="IMAGE/club_logo.png">
         <link rel="stylesheet" href="MBTeaI_css.css">
         <script src="MBTeaI_js.js" defer></script>
@@ -24,4 +25,5 @@
         </section>
         <button id="btn_fi" class="botton">診断結果を見る</button>
     </body>
+
 </html>
