--- a/MBTeaI_otyayasan.html
+++ b/MBTeaI_otyayasan.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>MBTeaI</title>
         <meta name="description" content="お茶屋診断をします">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/png" href="IMAGE/club_logo.png">
         <link rel="stylesheet" href="MBTeaI_css.css">
         <script src="MBTeaI_js.js" defer></script>
@@ -43,4 +44,5 @@
             </ul>
         </footer>
     </body>
+
 </html>
