--- a/MBTeaI_shindankekka.html
+++ b/MBTeaI_shindankekka.html
@@ -18,10 +18,15 @@
         </header>
         <h1 class="kekka">診断結果は...</h1>
         <p id="kekka_hyouzi">ここに診断結果を表示</p>
-        <p id="kekka_setumei">ここで診断結果を説明</p>
+        <div id="kekka_setumei">
+            <p id="kekka_description_first">ここで診断結果を説明</p>
+            <p id="kekka_description_second">ここで診断結果を説明</p>
+            <p id="kekka_description_const">そんなあなたにおすすめなのは・・・</p>
+            <p id="kekka_description_third">ここで診断結果を説明</p>
+        </div>
         <p class="kekka_bun">あなたに合うお茶屋さんは...</p>
-        <img src="IMAGE/IMG_3730.jpg" alt='茶店画像' id="otyaya_gazou">
+        <p id="kekka_name">お茶屋さんの名前を表示</p>
+        <!--<img src="IMAGE/IMG_3730.jpg" alt='茶店画像' id="otyaya_gazou">-->
         <button id="btn_fini" class="botton">ホームに戻る</button>
     </body>
-
 </html>
