--- a/MBTeaI_question.html
+++ b/MBTeaI_question.html
@@ -16,6 +16,7 @@
                     <h1 class="header_title">九州大学日本茶同好会</h1>
             </div>
         </header>
+        <progress id="myProgress" max="90" value="0"></progress>
         <section class="text">
             <p id="question">質問文を表示</p>
             <div id="oxbtn">
@@ -25,5 +26,4 @@
         </section>
         <button id="btn_fi" class="botton">診断結果を見る</button>
     </body>
-
 </html>
