--- a/MBTeaI_question.html
+++ b/MBTeaI_question.html
@@ -24,6 +24,7 @@
                 <button id="btn_q2">✖</button>
             </div>
         </section>
+        <button id="btn_before" class="botton">１つ前に戻る</button>
         <button id="btn_fi" class="botton">診断結果を見る</button>
     </body>
 </html>
